# fiducial-marker-lab

./: .gitignore  README.md
marker-design/: Makefile  marker-design-notes.md  mkPattern.py  mkPatternId.py
marker-design/rs/: __init__.py
tracking-demo/: CMakeLists.txt  README
tracking-demo/src/: gf.cpp  gf.hpp  label.cpp  marker.cpp  marker.h  poly.hpp  rs.hpp  tracking-demo.cpp
